fix close menu button on mobile horizontal

--- a/style/style.scss
+++ b/style/style.scss
@@ -1284,7 +1284,7 @@ body {
         }
       }
 
-      @media screen and (max-width: $medium) {
+      @media screen and (max-width: $tablet) {
         display: none;
       }
     }
@@ -1364,7 +1364,7 @@ body {
         }
       }
 
-      @media screen and (max-width: $medium) {
+      @media screen and (max-width: $tablet) {
         display: flex;
         justify-content: flex-end;
         align-items: center;
